syntax = "proto3";

package inventory;

option go_package = "proto/inventory";

import "google/protobuf/timestamp.proto";

service CategoryService {
  rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse);
  rpc GetCategory(CategoryIDRequest) returns (CategoryResponse);
  rpc UpdateCategory(UpdateCategoryRequest) returns (CategoryResponse);
  rpc DeleteCategory(CategoryIDRequest) returns (DeleteCategoryResponse);
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse);
}

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
}

message CategoryIDRequest {
  string id = 1;
}

message UpdateCategoryRequest {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CategoryResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message DeleteCategoryResponse {
  bool success = 1;
  string message = 2;
}

message ListCategoriesRequest {
}

message ListCategoriesResponse {
  repeated CategoryResponse categories = 1;
}