syntax = "proto3";

package user;

option go_package = "proto/user";

import "google/protobuf/timestamp.proto";

service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (UserResponse);
  rpc AuthenticateUser(AuthRequest) returns (AuthResponse);
  rpc GetUserProfile(UserIDRequest) returns (UserProfile);
}

message RegisterUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  string user_id = 2;
  string username = 3;
  string email = 4;
}

message UserIDRequest {
  string user_id = 1;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
}

message UserProfile {
  string id = 1;
  string username = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}